corrected buttons__wrap + 2 class new

--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@
 }
 /* ------------------------------------------ */
 
-.button__wrap {
+.buttons__wrap {
     gap: 40px;
 }
 
